--- a/HTML course/styles.css
+++ b/HTML course/styles.css
@@ -65,3 +65,8 @@ body {
     margin: 35px;
     border-radius: 50%;
 }
+
+#canvas {
+    background-color: rgb(255, 255, 255);
+    border: 1px solid black;
+} 
